--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  - var title = "Home"
+
+block content
+  h2.text-center Express App
+  
+  .row
+    .offset-sm-w.col-sm-8
+      .jumbotron.text-center
+        Welcome to your new Express App! Please visit the
+          #[a(href="https://github.com/rdegges/okta-express-login-portal", title="okkta-express-login-portal on GitHub") GitHub page] to learn more.
